# CruceGame

./: .gitignore  .travis.yml  Makefile.am  README.md  annotated.html  autogen.sh  classes.html  configure.ac  constants_8h.html  constants_8h_source.html  cruceGame_8h_source.html  deck_8c.html  deck_8h.html  deck_8h_source.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_77e1f5713a66b8eb5ab42fa0c0e22620.html  errors_8c.html  errors_8h.html  errors_8h_source.html  files.html  functions.html  functions_vars.html  game_8c.html  game_8h.html  game_8h_source.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  index.html  irc_connect_poc.c  md_docs_coding-standard.html  md_docs_data-structures.html  md_docs_features.html  md_docs_game-rules_en.html  md_docs_game-rules_ro.html  md_docs_hacking.html  (+29 more)
docs/: CruceGame_architecture.mm  CruceGame_arhitecture.mm  Doxyfile  GameProtocol_docs.md  TODO.md  TODO.txt  coding-standard.md  data-structures.md  features.md  game-rules_en.md  game-rules_ro.md  hacking.md  help.txt  introduction_ro.md  libCruceGame.NET.xml  requirements.md  roadmap.md  roadmap_v0.2.0.md  windows.md
docs/man1/: help.txt
ports/win32/: CruceGame.sln
ports/win32/cruceGameCurses/: cruceGameCurses.vcxproj  cruceGameCurses.vcxproj.filters
ports/win32/cruceGameCurses/pdcurses/include/: curses.h
ports/win32/cruceGameCurses/pdcurses/lib/: pdcurses.lib
ports/win32/libCruceGame/: libCruceGame.sln  libCruceGame.vcxproj  libCruceGame.vcxproj.filters
ports/win32/libCruceGame.NET/: AssemblyInfo.cpp  libCruceGame.NET.vcxproj  libCruceGame.NET.vcxproj.filters
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  enumvalues_b.js  enumvalues_c.js  (+31 more)
src/: Makefile.am  constants.h  deck.c  deck.h  errors.h  main.c  round.c  round.h  team.c  team.h
src/asciiGui/: output.c  output.h
src/cli/: cli.c  cli.h
src/cruceGameCurses/: cli.c  cli.h  gameCurses.c  main.c  output.c  output.h
src/gameProtocol/: actionReceiver.h  actionSender.c  actionSender.h
src/irc/: irc.c  irc.h
src/libAsciiGui/: main.c  output.c  output.h
src/libCruceGame/: constants.h  cruceGame.h  deck.c  deck.h  errors.c  errors.h  game.c  game.h  libCruceGame.h  platform.h  round.c  round.h  team.c  team.h
src/libCruceGame.NET/: Card.cpp  Deck.cpp  Game.cpp  Hand.cpp  Helpers.cpp  NETCard.h  NETConstants.h  NETDeck.h  NETGame.h  NETHand.h  NETHelpers.h  NETPlayer.h  NETReferenceCounter.h  NETRound.h  NETTeam.h  Player.cpp  ReferenceCounter.cpp  Round.cpp  Team.cpp  libCruceGame.NET.cpp
src/multiplayerCurses/: cli.c  cli.h  ircHandlers.c  ircHandlers.h  main.c  multiplayerCurses.c
src/network/: network.h
src/networking/: errors.h  network-mock.c  network-mock.h  network.c  network.h
src/networking/.deps/: network.Plo
src/oldMultiplayer/networking/: errors.h  network.c  network.h
src/oldMultiplayer/parser/: parser.c
src/parser/: parser.c  parser.h
src/singlePlayerCurses/: singlePlayerCurses.c
test/: Makefile.am  run-test.sh  test-deck.c  test-game.c  test-output.c  test-parser.c  test-round.c  test-team.c
test/helperFunctions/: Makefile.am  helperFunctions.c  helperFunctions.h
test/test-irc/: test-irc.c  test_irc.c
test/test-libCruceGame/: test-deck.c  test-round.c  test-team.c
test/test-networking/: test-network.c
